--- a/package.json
+++ b/package.json
@@ -8,25 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "babel-loader": "^8.2.2",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
-    "semantic-ui-css": "^2.4.1",
     "vue": "^2.6.11",
-    "vue-burger-menu": "^2.0.5",
-    "vue-router": "^3.2.0"
+    "vue-burger-menu": "^2.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "style-loader": "^2.0.0",
-    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
