--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "k-progress": "^1.5.0",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.5"
   },
